:bug: Fix issue on smaller screens

--- a/src/PriceOptimizer.css
+++ b/src/PriceOptimizer.css
@@ -154,13 +154,19 @@ button {
   .input-group {
     flex-direction: column;
     align-items: stretch;
+    margin-bottom: 1rem;
   }
   .input-label {
     width: 100%;
     margin-right: 0;
     margin-bottom: 0.5rem;
+    height: auto;
+    line-height: 1.2;
+    flex: none;
   }
   .input-field {
     width: 100%;
+    margin: 0;
+    padding: 0.5rem;
   }
 }
